# accountpilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  appcast.xml  config.example.yaml  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml  release-app.yml  release-helper.yml
app/: .gitignore  project.yml
app/AccountPilot/: AccountPilot.entitlements  AccountPilotApp.swift  ContentView.swift  Info.plist  PythonRuntime.swift  SparkleConfig.swift
app/AccountPilot/Models/: Account.swift  Message.swift  Person.swift  SyncStatus.swift
app/AccountPilot/Services/: AccountStore.swift  AttachmentService.swift  CLILinkPrompt.swift  ConfigMigration.swift  FDAProbe.swift  MessagesStore.swift  SearchStore.swift  SyncSupervisor.swift
app/AccountPilot/Shared/: SyncServiceProtocol.swift
app/AccountPilot/Views/: AccountsView.swift  AddAccountSheet.swift  SettingsView.swift  StatusBarMenu.swift
app/AccountPilot/Views/Browse/: AttachmentRow.swift  BrowseSidebar.swift  BrowseView.swift  MessageDetailView.swift  MessageListView.swift
app/AccountPilot/Views/Onboarding/: FDAWizardView.swift
app/AccountPilotTests/: AccountStoreTests.swift  ConfigMigrationTests.swift  PythonRuntimeTests.swift  README.md
app/AccountPilotXPC/: Info.plist  PythonHostBundle.swift  SyncServiceImpl.swift  SyncServiceMain.swift
app/scripts/: build-app.sh  build-dmg.sh  bundle-helper.sh  bundle-python.sh  codesign-app.sh  verify-app.sh
docs/: ci-setup.md  cli-contract.md  imessage-fda.md  release.md
docs/plans/: 0.2-app-pivot.md  0.2-p1-app-skeleton.md  0.2-p2-accounts-ui.md  0.2-p3-fda-wizard-sync.md  0.2-p4-data-viewer.md  0.2-p5-sparkle-dmg.md  0.2-p6-cli-contract.md
helpers/fda-helper/: Info.plist  PROTOCOL.md  Package.swift  README.md  helper.entitlements
helpers/fda-helper/Sources/AccountpilotFDAHelper/: main.swift
prompts/: signed-helper-phase1.md
scripts/: append-appcast-entry.sh  release-helper.sh  sign-update.sh
src/accountpilot/: __init__.py  __main__.py  cli.py
src/accountpilot/core/: auth.py  cas.py  config.py  identity.py  logging.py  models.py  paths.py  plugin.py  storage.py
src/accountpilot/core/cli/: accounts_cmds.py  completion_cmd.py  config_cmd.py  db_cmds.py  exit_codes.py  messages_cmds.py  oauth_cmd.py  people_cmds.py  search_cmd.py  self_cmd.py  service_cmd.py  setup_cmd.py  status_cmd.py  sync_once_cmd.py
src/accountpilot/core/db/: connection.py
src/accountpilot/core/oauth/: flow.py  google.py  microsoft.py
src/accountpilot/oauth_clients/: google.json  microsoft.json
src/accountpilot/plugins/imessage/: __init__.py  attachments.py  attributed_body.py  cli.py  config.py  helper_client.py  plugin.py  reader.py  watcher.py
src/accountpilot/plugins/mail/: __init__.py  cli.py  config.py  oauth.py  parser.py  plugin.py  sync.py
src/accountpilot/templates/services/: launchd.plist.j2  systemd.service.j2
tests/accountpilot/: conftest.py
tests/accountpilot/fixtures/synthetic_plugin/: plugin.py
tests/accountpilot/integration/: test_synthetic_plugin.py
tests/accountpilot/plugins/imessage/: conftest.py  test_attachments.py  test_attributed_body.py  test_cli.py  test_config.py  test_helper_spawn.py  test_plugin.py  test_reader.py  (+1 more)
tests/integration/: agent_smoke.sh  cli_contract_test.py
tests/integration/jsonschemas/: accounts_list.schema.json  attachments_path.schema.json  envelope.schema.json  messages_get.schema.json  messages_list.schema.json  oauth_status.schema.json  people_list.schema.json  people_show.schema.json  search.schema.json  status.schema.json
(+59 files in other folders)
